facedetector-bugs fixed and speech orders added: switch on/off video/audio and show help

--- a/index.html
+++ b/index.html
@@ -290,9 +290,9 @@
             <div class="video_options_buttons disabled" id="control_effects" {{ action controlEffects target="view" }}>Effekte</div>
           </div>
           <div id="videoEffects">
-            <div {{action "putGlassesOnUser" }} class="effectButton" id="glasses" ></div>
-            <div {{action "putHatOnUser" }} class="effectButton" id="hat" ></div>
-            <div {{action "putBeardOnUser" }} class="effectButton" id="beard" ></div>
+            <div {{action putGlassesOnUser target="view" }} class="effectButton" id="glasses" ></div>
+            <div {{action putHatOnUser target="view" }} class="effectButton" id="hat" ></div>
+            <div {{action putBeardOnUser target="view" }} class="effectButton" id="beard" ></div>
             <div {{action controlEffects target="view" }} class="effectButton" id="effect_off" >kein Effekt</div>
             <div {{action controlEffects target="view" }} class="effectButton" id="effect_off" >kein Effekt</div>
             <div {{action controlEffects target="view" }} class="effectButton" id="effect_off" >kein Effekt</div>
