signaling works again

--- a/visualizer.html
+++ b/visualizer.html
@@ -3,10 +3,11 @@
   <head>
     <title></title>
     <meta content="text/html;charset=UTF-8" http-equiv="content-type">
-    <link href="" type="text/css" rel="stylesheet"/>
   </head>
   <body>
-    
-    <script type="text/javascript" src=""></script>
+    <canvas id="canvas" width="200px" height="200px">
+      asdf
+    </canvas>
+    <script src="assets/js/helpers/visualizer.js" type="text/javascript"></script>
   </body>
 </html>
