--- a/visualizer.html
+++ b/visualizer.html
@@ -5,7 +5,7 @@
     <meta content="text/html;charset=UTF-8" http-equiv="content-type">
   </head>
   <body>
-    <canvas id="canvas" width="200px" height="200px">
+    <canvas id="canvas" width="512px" height="200px" border="1px">
       asdf
     </canvas>
     <script src="assets/js/helpers/visualizer.js" type="text/javascript"></script>
