sending text messages works again

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <audio autoplay loop muted></audio>
       
           <form action='javascript:void(0);'>
-            <div class='chatOutput' contenteditable='false'></div>
-            <div class='chatInput' contenteditable='true'></div>
+            <div class='output'></div>
+            <div class='input'></div>
             <input type='image' class='micro_recorder' src='assets/img/micro_recorder_off.png'/>
           </form>
         </div>
