--- a/visualizer.html
+++ b/visualizer.html
@@ -4,8 +4,14 @@
     <title></title>
     <meta content="text/html;charset=UTF-8" http-equiv="content-type">
   </head>
+  <style>
+    html, body {
+      width: 100%;
+      height: 100%;
+    }
+  </style>
   <body>
-    <canvas id="canvas" width="512px" height="200px" border="1px">
+    <canvas id="canvas">
       asdf
     </canvas>
     <script src="assets/js/helpers/visualizer.js" type="text/javascript"></script>
