--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class='videoWrapper'>
           <div class='stateMute'></div>
           <div class='removeParticipant' onclick="App.Controller.user.removeParticipant('{{remoteUserId}}')"></div>
-          <img class='bgAvatar' src='assets/img/avatar.jpg' /><div class='recordRemoteVideo'></div>
+          <img class='defaultAvatar' src='assets/img/avatar.jpg' /><div class='recordRemoteVideo'></div>
           <div class='recordRemoteAudio'></div>
           <video autoplay></video>
           <audio autoplay loop muted></audio>
