added audio visualizer for local user

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
     <script src="assets/js/helpers/debugger.js"></script>
     <script src="assets/js/helpers/signaling.js"></script>
     <script src="assets/js/helpers/transferVisualizer.js"></script>
-
+    <script src="assets/js/helpers/audioVisualizer.js"></script>
+    
     <!-- app -->
     <script src="assets/js/app.js"></script>
 
