datachannel onopen feedback added

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <div class="info"></div>
           </div>
         </div>
+        <div class="connectionInfo">Verbindung wird aufgebaut...</div>
         <form action='javascript:void(0);'>
           <div class='output'></div>
           <input type='image' class='micro_recorder' src='assets/img/micro_recorder_off.png'/>
