added titles for tooltips

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
       window.jQuery || document.write('<script src="assets/js/libs/jquery.js"><\/script>')
     </script>
     <script src="assets/js/libs/jquery-animate.min.js"></script>
+    <script src="assets/js/libs/jquery.fittext.js"></script>
 
     <!-- libs -->
     <script src="assets/js/libs/handlebars-1.0.0-rc.3.js"></script>
